updated some of the code